# Video-Player-Using-PyQt5

./: README.md  __init__.py  pyproject.toml
.github/workflows/: test.yaml
src/: __init__.py  main.py
tests/: conftest.py  test_duration.py  test_edge_cases.py  test_initialisation.py  test_logo_changed.py  test_menu_bar.py  test_muted.py  test_open_file.py  test_pallete.py  test_play_video.py  test_position.py  test_quit_app.py  test_set_position.py  test_signals.py  test_stop_function.py  test_volume.py
